--- a/src/main/resources/templates/login-page.html
+++ b/src/main/resources/templates/login-page.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"  xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="utf-8" />
-    <link rel="apple-touch-icon" sizes="76x76" href="assets/img/apple-icon.png">
-    <link rel="icon" type="image/png" href="assets/img/favicon.png">
+    <link rel="apple-touch-icon" sizes="76x76" th:href="@{/assets/img/apple-icon.png}">
+    <link rel="icon" type="image/png" th:href="@{/assets/img/favicon.png}">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <title>Login Page - Now UI Kit by Creative Tim</title>
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
-
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="assets/css/now-ui-kit.css?v=1.1.0" rel="stylesheet" />
-    <!-- CSS Just for demo purpose, don't include it in your project -->
-    <link href="assets/css/demo.css" rel="stylesheet" />
-    <!-- Canonical SEO -->
+    <link th:href="@{/assets/css/bootstrap.min.css}" rel="stylesheet" />
+    <link th:href="@{/assets/css/now-ui-kit.css?v=1.1.0}" rel="stylesheet" />
+    <link th:href="@{/assets/css/demo.css}" rel="stylesheet" />
     <link rel="canonical" href="" />
-    <!--  Social tags      -->
     <meta name="keywords" content="">
     <meta name="description" content="">
-    
-    
-    
 </head>
-
+<style>
+	.pull-left{
+		float:left;
+	}
+	.pull-right{
+		float:right;
+	}
+</style>
 <body class="login-page sidebar-collapse">
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-primary fixed-top navbar-transparent " color-on-scroll="400">
@@ -90,10 +90,10 @@
         <div class="container">
             <div class="col-md-4 content-center">
                 <div class="card card-login card-plain">
-                    <form class="form" method="" action="">
+                    <form class="form" method="post" th:action="@{/Login/login}">
                         <div class="header header-primary text-center">
                             <div class="logo-container">
-                                <img src="assets/img/now-logo.png" alt="">
+                                <img th:src="@{/assets/img/now-logo.png}" alt="">
                             </div>
                         </div>
                         <div class="content">
@@ -101,21 +101,21 @@
                                 <span class="input-group-addon">
                                     <i class="now-ui-icons users_circle-08"></i>
                                 </span>
-                                <input type="text" class="form-control" placeholder="账号名">
+                                <input type="text" name="uname" class="form-control" placeholder="账号名">
                             </div>
                             <div class="input-group form-group-no-border input-lg" style="margin-top: 20px;margin-bottom: 0px;">
                                 <span class="input-group-addon">
                                     <i class="now-ui-icons text_caps-small"></i>
                                 </span>
-                                <input type="password" placeholder="账号密码" class="form-control" />
+                                <input type="password" name="upassword" placeholder="账号密码" class="form-control" />
                             </div>
                         </div>
-                        <div class="footer text-center">
-                            <a href="pagehome.html" class="btn btn-primary btn-round btn-lg btn-block">登录</a>
+                        <div class="footer text-center" >
+                           <input type="submit" value="登录" class="btn btn-primary btn-round btn-lg btn-block">
                         </div>
                         <div class="pull-left">
                             <h6>
-                                <a href="register.html" class="link">创建新账户</a>
+                                <a th:href="@{/Login/toregister}" class="link">创建新账户</a>
                             </h6>
                         </div>
                         <div class="pull-right">
@@ -148,18 +148,13 @@
     </div>
 </body>
 <!--   Core JS Files   -->
-<script src="assets/js/core/jquery.3.2.1.min.js" type="text/javascript"></script>
-<script src="assets/js/core/popper.min.js" type="text/javascript"></script>
-<script src="assets/js/core/bootstrap.min.js" type="text/javascript"></script>
-<!--  Plugin for Switches, full documentation here: http://www.jque.re/plugins/version3/bootstrap.switch/ -->
-<script src="assets/js/plugins/bootstrap-switch.js"></script>
-<!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
-<script src="assets/js/plugins/nouislider.min.js" type="text/javascript"></script>
-<!--  Plugin for the DatePicker, full documentation here: https://github.com/uxsolutions/bootstrap-datepicker -->
-<script src="assets/js/plugins/bootstrap-datepicker.js" type="text/javascript"></script>
-<!-- Share Library etc -->
-<script src="assets/js/plugins/jquery.sharrre.js" type="text/javascript"></script>
-<!-- Control Center for Now Ui Kit: parallax effects, scripts for the example pages etc -->
-<script src="assets/js/now-ui-kit.js?v=1.1.0" type="text/javascript"></script>
+<script th:src="@{/assets/js/core/jquery.3.2.1.min.js}" type="text/javascript"></script>
+<script th:src="@{/assets/js/core/popper.min.js}" type="text/javascript"></script>
+<script th:src="@{/assets/js/core/bootstrap.min.js}" type="text/javascript"></script>
+<script th:src="@{/assets/js/plugins/bootstrap-switch.js}"></script>
+<script th:src="@{/assets/js/plugins/nouislider.min.js}" type="text/javascript"></script>
+<script th:src="@{/assets/js/plugins/bootstrap-datepicker.js}" type="text/javascript"></script>
+<script th:src="@{/assets/js/plugins/jquery.sharrre.js}" type="text/javascript"></script>
+<script th:src="@{/assets/js/now-ui-kit.js?v=1.1.0}" type="text/javascript"></script>
 
 </html>
