--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -13,7 +13,7 @@
 	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="img1/favicon/apple-touch-icon-144x144-precomposed.html">
 	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="img1/favicon/apple-touch-icon-72x72-precomposed.html">
 	<link rel="apple-touch-icon-precomposed" href="img1/favicon/apple-touch-icon-precomposed.html">
-	<link rel="stylesheet" href="css/minified.css">
+	<link rel="stylesheet" href="css1/minified.css">
 	<script>window.jQuery || document.write('<script src="js1/jquery.min.js"><\/script>');</script>
 	<script src="js1/modernizr.min.js"></script>	
 	<link rel="stylesheet" href="css1/innerpage.css">
