--- a/src/main/resources/templates/mode.html
+++ b/src/main/resources/templates/mode.html
@@ -87,6 +87,7 @@
 								<div class="dropdown-menu" aria-labelledby="navbarDropdown">
 									<a class="dropdown-item" href="GoodManager.html" target="main">餐饮管理</a>
 									<a class="dropdown-item" href="HotelManager.html" target="main">住宿管理</a>
+									<a class="dropdown-item" href="hotelOrder.html" target="main">住宿订单</a>
 									<a class="dropdown-item" href="GoodOrderAdd.html" target="main">餐饮订单</a>
 									<a class="dropdown-item" href="GoodContact.html" target="main">餐饮套餐管理</a>
 									
