--- a/src/main/resources/templates/info.html
+++ b/src/main/resources/templates/info.html
@@ -1,8 +1,5 @@
 <!DOCTYPE html>
-<!--[if IE 7 ]><html class="ie ie7 lte9 lte8 lte7" lang="en-US"><![endif]-->
-<!--[if IE 8]><html class="ie ie8 lte9 lte8" lang="en-US">	<![endif]-->
-<!--[if IE 9]><html class="ie ie9 lte9" lang="en-US"><![endif]-->
-<!--[if (gt IE 9)|!(IE)]><!--><html class="noIE" lang="en-US"><!--<![endif]-->
+<html class="noIE" lang="en-US" xmlns:th="http://www.thymeleaf.org">
 <head>
 	<meta charset="UTF-8" />
 	<title>个人中心</title>
@@ -10,24 +7,18 @@
 	<meta name="keywords" content=""/>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	
-	<!-- Favorite Icons -->
-	<link rel="icon" href="img1/favicon/favicon.html" type="image/x-icon" />
-	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="img1/favicon/apple-touch-icon-144x144-precomposed.html">
-	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="img1/favicon/apple-touch-icon-72x72-precomposed.html">
-	<link rel="apple-touch-icon-precomposed" href="img1/favicon/apple-touch-icon-precomposed.html">
-	<!-- // Favorite Icons -->
-	
-	<!--<link href='http://fonts.useso.com/css?family=Open+Sans:300,400,600,700' rel='stylesheet' type='text/css'>-->
-	
-	<!-- GENERAL CSS FILES -->
-	<link rel="stylesheet" href="css1/minified.css">
-
-	<script>window.jQuery || document.write('<script src="js1/jquery.min.js"><\/script>');</script>
-	<script src="js1/modernizr.min.js"></script>	
+	<link rel="icon" th:href="@{/img1/favicon/favicon.html}" type="image/x-icon" />
+	<link rel="apple-touch-icon-precomposed" sizes="144x144" th:href="@{/img1/favicon/apple-touch-icon-144x144-precomposed.html}">
+	<link rel="apple-touch-icon-precomposed" sizes="72x72" th:href="@{/img1/favicon/apple-touch-icon-72x72-precomposed.html}">
+	<link rel="apple-touch-icon-precomposed" th:href="@{/img1/favicon/apple-touch-icon-precomposed.html}">
+	<link rel="stylesheet" th:href="@{/css1/minified.css}">
+	<script>window.jQuery || document.write('<script th:src="@{/js1/jquery.min.js}"><\/script>');</script>
+	<script th:src="@{/js1/jquery.min.js}"></script>
+	<script th:src="@{/js1/modernizr.min.js}"></script>	
 	<!-- PARTICULAR PAGES CSS FILES -->
-	<link rel="stylesheet" href="css1/innerpage.css">
+	<link rel="stylesheet" th:href="@{/css1/innerpage.css}">
 	<!-- // PARTICULAR PAGES CSS FILES -->
-	<link rel="stylesheet" href="css1/responsive.css">
+	<link rel="stylesheet" th:href="@{/css1/responsive.css}">
 </head>
 	<body>
 		<div class="panel-group checkout" id="checkout-collapse">
@@ -48,43 +39,37 @@
 														<div class="form-group stylish-input col-sm-6">
 															<label for="inputFirstname" class="col-sm-3 col-lg-2 control-label required">账号:</label>
 															<div class="col-sm-9 col-lg-8">
-																<p>128232312</p>
-															</div>
-														</div>
-														<div class="form-group stylish-input col-sm-6">
-															<label for="inputLastname" class="col-sm-3 col-lg-4 control-label required">姓名:</label>
-															<div class="col-sm-9 col-lg-8">
-																<p>128232312</p>
-															</div>
-														</div>
-														<div class="form-group stylish-input col-sm-6">
-															<label for="inputLastname" class="col-sm-3 col-lg-4 control-label required">年龄:</label>
-															<div class="col-sm-9 col-lg-8">
-																<p>18</p>
+																<p th:text="${users.uname}">128232312</p>
 															</div>
 														</div>
 														<div class="form-group stylish-input col-sm-6">
 															<label for="inputEmail2" class="col-sm-3 col-lg-4 control-label required">账号密码:</label>
 															<div class="col-sm-9 col-lg-8">
-																<p>128232312@qq.com</p>
+																<p th:text="${users.upassword}"></p>
+															</div>
+														</div>
+														<div class="form-group stylish-input col-sm-6">
+															<label for="inputLastname" class="col-sm-3 col-lg-4 control-label ">年龄:</label>
+															<div class="col-sm-9 col-lg-8">
+																<p th:text="${users.age}">18</p>
 															</div>
 														</div>
 														<div class="form-group stylish-input col-sm-6">
 															<label for="inputPhone" class="col-sm-3 col-lg-4 control-label required">电话:</label>
 															<div class="col-sm-9 col-lg-8">
-																<p>1282323112</p>
+																<p th:text="${users.phone}">1282323112</p>
 															</div>
 														</div>
 														<div class="form-group stylish-input col-sm-6">
 															<label for="inputFax" class="col-sm-3 col-lg-4 control-label">性别:</label>
 															<div class="col-sm-9 col-lg-8">
-																<p>男 </p>
+																<p th:text="${users.name1}">男 </p>
 															</div>
 														</div>
 														<div class="form-group stylish-input col-sm-6">
 															<label for="inputCompany" class="col-sm-3 col-lg-4 control-label">身高:</label>
 															<div class="col-sm-9 col-lg-8">
-																<p>160</p>
+																<p th:text="${users.height}">160</p>
 															</div>
 														</div>
 													</div>
@@ -92,19 +77,13 @@
 														<div class="form-group stylish-input col-sm-6">
 															<label for="inputAddress2" class="col-sm-3 col-lg-4 control-label">体重:</label>
 															<div class="col-sm-9 col-lg-8">
-																<p>40kg</p>
+																<p th:text="${users.width}">40</p>
 															</div>
 														</div>
 														<div class="form-group stylish-input col-sm-6">
 															<label for="inputCity" class="col-sm-3 col-lg-4 control-label ">居住地址:</label>
 															<div class="col-sm-9 col-lg-8">
-																<p>湖南株洲市XX区XX街道 XXXXX  XXX XXX</p>
-															</div>
-														</div>
-														<div class="form-group stylish-input col-sm-6">
-															<label for="inputPostcode" class="col-sm-3 col-lg-4 control-label ">爱好:</label>
-															<div class="col-sm-9 col-lg-8">
-																<p>是是是</p>
+																<p th:text="${users.address}">湖南株洲市XX区XX街道 XXXXX  XXX XXX</p>
 															</div>
 														</div>
 													</div>
@@ -115,22 +94,8 @@
 									</div>
 			</div>
 		</div>
-<script src="js1/minified.js"></script>
-<!-- // Essential Javascripts -->
-
-<script>
-/*  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','../../../www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-27646173-3', 'themina.net');
-  ga('send', 'pageview');*/
-
-</script>
-	<!-- Particular Page Javascripts -->
-	<script src="js1/products.js"></script>
-	<!-- // Particular Page Javascripts -->
+	<script th:src="@{/js1/minified.js}"></script>
+	<script th:src="@{/js1/products.js}"></script>
 	
 </body>
 </html>
