--- a/src/main/resources/templates/pagehome.html
+++ b/src/main/resources/templates/pagehome.html
@@ -167,7 +167,7 @@
 											<a th:href="@{/customer/toPerson}">查看</a>
 										</li>
 										<li>
-											<a href="login-page.html">登出</a>
+											<a th:href="@{/Login/back}">登出</a>
 										</li>
 									</ul>
 								</nav>
@@ -185,7 +185,7 @@
 							<nav id="site-menu" role="navigation">
 								<ul class="main-menu hidden-sm hidden-xs">
 									<li class="active">
-										<a href="pagehome.html">首页</a>
+										<a th:href="@{/customer/topagehome}">首页</a>
 									</li>
 									<li>
 										<a href="productList.html">活动</a>
@@ -198,7 +198,7 @@
 									</li>
 
 									<li>
-										<a href="Person.html">个人中心</a>
+										<a th:href="@{/customer/toPerson}">个人中心</a>
 									</li>
 								</ul>
 							</nav>
