--- a/src/main/resources/templates/updateInfo.html
+++ b/src/main/resources/templates/updateInfo.html
@@ -1,33 +1,24 @@
 <!DOCTYPE html>
-<!--[if IE 7 ]><html class="ie ie7 lte9 lte8 lte7" lang="en-US"><![endif]-->
-<!--[if IE 8]><html class="ie ie8 lte9 lte8" lang="en-US">	<![endif]-->
-<!--[if IE 9]><html class="ie ie9 lte9" lang="en-US"><![endif]-->
-<!--[if (gt IE 9)|!(IE)]><!--><html class="noIE" lang="en-US"><!--<![endif]-->
+<html class="noIE" lang="en-US" xmlns:th="http://www.thymeleaf.org">
 <head>
 	<meta charset="UTF-8" />
 	<title>个人中心</title>
 	<meta name="description" content=""/>
 	<meta name="keywords" content=""/>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	
-	<!-- Favorite Icons -->
-	<link rel="icon" href="img1/favicon/favicon.html" type="image/x-icon" />
-	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="img1/favicon/apple-touch-icon-144x144-precomposed.html">
-	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="img1/favicon/apple-touch-icon-72x72-precomposed.html">
-	<link rel="apple-touch-icon-precomposed" href="img1/favicon/apple-touch-icon-precomposed.html">
-	<!-- // Favorite Icons -->
-	
-	<!--<link href='http://fonts.useso.com/css?family=Open+Sans:300,400,600,700' rel='stylesheet' type='text/css'>-->
-	
-	<!-- GENERAL CSS FILES -->
-	<link rel="stylesheet" href="css1/minified.css">
-
-	<script>window.jQuery || document.write('<script src="js1/jquery.min.js"><\/script>');</script>
-	<script src="js1/modernizr.min.js"></script>	
+		
+	<link rel="icon" th:href="@{/img1/favicon/favicon.html}" type="image/x-icon" />
+	<link rel="apple-touch-icon-precomposed" sizes="144x144" th:href="@{/img1/favicon/apple-touch-icon-144x144-precomposed.html}">
+	<link rel="apple-touch-icon-precomposed" sizes="72x72" th:href="@{/img1/favicon/apple-touch-icon-72x72-precomposed.html}">
+	<link rel="apple-touch-icon-precomposed" th:href="@{/img1/favicon/apple-touch-icon-precomposed.html}">
+	<link rel="stylesheet" th:href="@{/css1/minified.css}">
+	<script>window.jQuery || document.write('<script th:src="@{/js1/jquery.min.js}"><\/script>');</script>
+	<script th:src="@{/js1/jquery.min.js}"></script>
+	<script th:src="@{/js1/modernizr.min.js}"></script>	
 	<!-- PARTICULAR PAGES CSS FILES -->
-	<link rel="stylesheet" href="css1/innerpage.css">
+	<link rel="stylesheet" th:href="@{/css1/innerpage.css}">
 	<!-- // PARTICULAR PAGES CSS FILES -->
-	<link rel="stylesheet" href="css1/responsive.css">
+	<link rel="stylesheet" th:href="@{/css1/responsive.css}">
 </head>
 <style>
 		.form-group div p{
@@ -52,122 +43,68 @@
 									</div>
 						<div id="checkout-collapse3" class="panel-collapse in">
 										<div class="panel-body" >
-											<form class="form-horizontal" role="form">
+											<form class="form-horizontal" th:action="@{/customer/updateUsers}" method="post" role="form">
 												<div class="row">
 													<div class="col-xs-12 col-sm-12 col-md-6">
+														<input type="hidden" th:value="${users.id}" name="id"> 
+															<input type="hidden" th:value="${users.typeid}" name="typeid"> 
+														<input type="hidden" th:value="${users.idcardno}" name="idcardno"> 
 														<div class="form-group stylish-input col-sm-6">
 															<label for="inputFirstname" class="col-sm-3 col-lg-2 control-label required">账号:</label>
 															<div class="col-sm-9 col-lg-8">
-																<input type="text" class="form-control" id="inputFirstname" />
+																<input type="text" class="form-control" name="uname" readonly="readonly" th:value="${users.uname}" id="inputFirstname" />
 															</div>	
 														</div>
 														<div class="form-group stylish-input col-sm-6">
-															<label for="inputLastname" class="col-sm-3 col-lg-4 control-label required">姓名:</label>
-															<div class="col-sm-9 col-lg-8">
-																<input type="text" class="form-control" id="inputLastname" />
-															</div>
-														</div>
-														
-														<div class="form-group stylish-input col-sm-6">
 															<label for="inputEmail2" class="col-sm-3 col-lg-4 control-label required">账号密码:</label>
 															<div class="col-sm-9 col-lg-8">
-																<input type="text" class="form-control" id="inputEmail2" />
+																<input type="text" th:value="${users.upassword}" name="upassword" class="form-control" id="inputEmail2" />
 															</div>
 														</div>
 														<div class="form-group stylish-input col-sm-6">
 															<label for="inputPhone" class="col-sm-3 col-lg-4 control-label required">电话:</label>
 															<div class="col-sm-9 col-lg-8">
-																<input type="text" class="form-control" id="inputPhone" />
+																<input type="text" th:value="${users.phone}" name="phone" class="form-control" id="inputPhone" />
 															</div>
-														</div>
-														<div class="form-group stylish-input col-sm-6">
-															<label  class="col-sm-3 col-lg-4 control-label" style="margin-right: 20px;">性别:</label>
-															
-															<input type="radio" id="deliverymethod1" style="padding-left: 10px;" checked class="prettyCheckable" name="deliverymethod"  />
-															男
-															<input type="radio" id="deliverymethod2"  class="prettyCheckable" name="deliverymethod"  />
-															女
 														</div>
 														<div class="form-group stylish-input col-sm-6">
 															<label for="inputCompany" class="col-sm-3 col-lg-4 control-label">身高:</label>
 															<div class="col-sm-9 col-lg-8">
-																<input type="text" class="form-control" id="inputCompany" />
+																<input type="text" class="form-control" name="height" th:value="${users.height}" id="inputCompany" />
 															</div>
 														</div>
-													</div>
-													<div class="col-xs-12 col-sm-12	">
 														<div class="form-group stylish-input col-sm-6">
 															<label for="inputAddress2" class="col-sm-3 col-lg-4 control-label">体重:</label>
 															<div class="col-sm-9 col-lg-8">
-																<input type="text" class="form-control" id="inputAddress2" />
+																<input type="text" class="form-control" name="width" th:value="${users.width}" id="inputAddress2" />
 															</div>
 														</div>
 														<div class="form-group stylish-input col-sm-6">
 															<label for="inputCity" class="col-sm-3 col-lg-4 control-label ">居住地址:</label>
 															<div class="col-sm-9 col-lg-8">
-																<input type="text" class="form-control" id="inputCity" />
+																<input type="text" th:value="${users.address}" class="form-control" name="address" id="inputCity" />
 															</div>
 														</div>
 														<div class="form-group stylish-input col-sm-6">
-															<label for="inputPostcode" class="col-sm-3 col-lg-4 control-label ">爱好:</label>
-															<div class="col-sm-9 col-lg-8">
-																<input type="text" class="form-control" id="inputPostcode" />
+															<label  class="col-sm-3 col-lg-4 control-label" style="margin-right: 20px;">性别:</label>
+															<div id="divone">
+																<input type="radio" name="name1" value="男"   class="prettyCheckable" th:checked="${users.name1=='男'}">男
+																<input type="radio" name="name1" value="女"   class="prettyCheckable" th:checked="${users.name1=='女'}">女
 															</div>
 														</div>
 													</div>
 													 
-													
 												</div>
-												<div class="col-sm-12" >
-													<div class="form-group stylish-input">
-																<label for="brithday" style="margin-left: -30px;" class="col-sm-2 col-lg-4 control-label required">出生日期:</label>
-																	<div class="col-sm-10 col-lg-8">
-																		<p>
-																			<span>年:</span>
-																			<select name="year" id="brithday">
-																				<option>1999</option>
-																			</select>
-																		</p>
-																		<p>
-																			<span>月:</span>
-																			<select name="month"  >
-																				<option>1999</option>
-																				<option>1998</option>
-																			</select>
-																		</p>
-																		<p>
-																			<span>日:</span>
-																			<select name="day"  >
-																				<option>1999</option>
-																			</select>
-																		</p>
-																	</div>
-																	
-														</div>
-												</div>		
 												<div class="space20 clearfix"></div>
-												<button class="btn btn-primary" style="margin: 0px 0px 0px 20px;">修改</button>
+												<input type="submit" class="btn btn-primary" style="margin-left: 20px" value="修改"> 
 											</form>
+									
 										</div>
 									</div>
 			</div>
 		</div>
-<script src="js1/minified.js"></script>
-<!-- // Essential Javascripts -->
-
-<script>
-/*  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','../../../www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-27646173-3', 'themina.net');
-  ga('send', 'pageview');*/
-
-</script>
-	<!-- Particular Page Javascripts -->
-	<script src="js1/products.js"></script>
-	<!-- // Particular Page Javascripts -->
+<script th:src="@{/js1/minified.js}"></script>
+<script th:src="@{/js1/products.js}"></script>
 	
 </body>
 </html>
